--- a/css/estilos.css
+++ b/css/estilos.css
@@ -375,6 +375,10 @@ html {
   justify-content: center; /* Asegura que los productos estén centrados */
 }
 
+.logo {
+  width: 60%;
+}
+
 @media (max-width: 768px) {
   .carousel-inner-productos .row .col-6 {
     max-width: 50%; /* Cada producto ocupa el 50% del ancho */
@@ -562,6 +566,21 @@ button.btn-secondary {
   font-family: "Roboto", serif;
   color: #2A3F92;
   text-align: left;
+}
+
+.maps {
+  font-family: "Roboto", serif;
+}
+
+.mapsfondo {
+  background: linear-gradient(180deg, rgb(255, 254, 254) 0%, #C3C4C6 100%);
+}
+
+.cierre-contacto {
+  font-family: "Roboto", serif;
+}
+.cierre-contacto h2 {
+  margin-bottom: 20px;
 }
 
 footer {
