--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Petrona:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
@@ -13,8 +13,8 @@ html {
 
 .navbar {
   background-color: #2A3F92;
-  font-family: "Roboto", serif;
-  font-size: 18.5px;
+  font-family: "Raleway", serif;
+  font-size: 18px;
   display: flex;
   justify-content: space-between; /* Logo al inicio e ícono al final */
   align-items: center;
@@ -113,12 +113,12 @@ html {
 }
 
 .display-4-index {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   font-size: 50px;
 }
 
 .lead-index {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   font-size: 20px;
 }
 
@@ -127,7 +127,7 @@ html {
 }
 
 #sobre-nosotros {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 
 #sobre-nosotros p {
@@ -135,7 +135,7 @@ html {
 }
 
 .beneficios h4 {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 
 .beneficios p {
@@ -149,8 +149,9 @@ html {
   /* Punto de corte específico para dispositivos móviles pequeños */
 }
 #productos-novedad h3 {
-  font-family: "Roboto", serif;
-  font-size: calc(50px - 8px);
+  font-family: "Raleway", serif;
+  font-size: calc(50px - 9px);
+  font-style: 700;
 }
 #productos-novedad p {
   font-family: "DM Sans", sans-serif;
@@ -275,19 +276,19 @@ html {
   }
 }
 .display-4-productos {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   color: #2A3F92;
   text-align: left;
 }
 
 .lead-productos {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   color: #2A3F92;
   text-align: left;
 }
 
 .fw-bold-productos {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   text-decoration: none;
   color: #2A3F92;
 }
@@ -435,18 +436,18 @@ button.btn-secondary {
 .product-info #textabovetable {
   margin-bottom: 1rem;
   font-size: 1rem;
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 .product-info #textabovetable2 {
   font-size: 0.9rem;
   margin-bottom: 1.5rem;
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 .product-info #table-title-product {
   font-size: 1.2rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 .product-info .table {
   width: 100%;
@@ -454,7 +455,7 @@ button.btn-secondary {
   margin-bottom: 1.5rem;
 }
 .product-info .table th, .product-info .table td {
-  border: 1px solid black;
+  border: 1px solid rgb(44, 44, 44);
   padding: 0.8rem;
   text-align: left;
 }
@@ -526,13 +527,18 @@ button.btn-secondary {
   padding: 20px;
 }
 .card-nosotros h2 {
-  font-family: "Roboto", serif;
-  color: black;
+  font-family: "Raleway", serif;
+  color: rgb(44, 44, 44);
 }
 
 .card-nosotros p {
   font-family: "DM Sans", sans-serif;
-  color: black;
+  color: rgb(44, 44, 44);
+}
+
+.card-nosotros h4 {
+  font-family: "DM Sans", sans-serif;
+  color: rgb(44, 44, 44);
 }
 
 .card-body-nosotros {
@@ -557,19 +563,19 @@ button.btn-secondary {
 }
 
 .display-4-contacto {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   color: #2A3F92;
   text-align: left;
 }
 
 .lead-contacto {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
   color: #2A3F92;
   text-align: left;
 }
 
 .maps {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 
 .mapsfondo {
@@ -577,7 +583,7 @@ button.btn-secondary {
 }
 
 .cierre-contacto {
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 .cierre-contacto h2 {
   margin-bottom: 20px;
@@ -588,7 +594,7 @@ footer {
   color: #2295D3;
   text-align: left;
   padding: 20px;
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 footer .footer-links {
   list-style: none;
@@ -602,7 +608,7 @@ footer .footer-links li a {
   text-decoration: none;
   color: #2295D3;
   font-size: 17px;
-  font-family: "Roboto", serif;
+  font-family: "Raleway", serif;
 }
 footer .footer-links li a:hover {
   color: #CFF0FC;
