--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Petrona:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-// font-family: Roboto
+// font-family: Raleway
 // font-family: Dm sans
 
 
@@ -12,7 +12,7 @@ $ancho: 720px;
 $alto: 100px;
 $alto2: 500px;
 //fonts
-$font1: 'Roboto', serif;
+$font1: 'Raleway', serif;
 $font2: 'DM Sans', sans-serif;
 $bold1:700;
 $bold2: 500;
@@ -23,7 +23,7 @@ $color3:#CFF0FC;
 $color4:#2295D3;
 $color5:#2A3F92;
 $color6:#ffffff;
-$color7:black;
+$color7:rgb(44, 44, 44);
 //dimensiones
 $size1: 100%;
 $size2: 50%;
@@ -45,7 +45,7 @@ html{
 .navbar {
     background-color: $color5;
     font-family: $font1;
-    font-size: calc($size3 - 1.5px);
+    font-size: calc($size3 - 2px);
     display: flex;
     justify-content: space-between; /* Logo al inicio e ícono al final */
     align-items: center;
@@ -205,7 +205,8 @@ html{
 
     h3 {
         font-family: $font1;
-        font-size: calc(#{$size4} - 8px);
+        font-size: calc(#{$size4} - 9px);
+        font-style: $bold1;
     }
 
     p {
@@ -642,6 +643,13 @@ button.btn-secondary {
 
 .card-nosotros{
     p{
+        font-family: $font2;
+        color: $color7;
+    }
+}
+
+.card-nosotros{
+    h4{
         font-family: $font2;
         color: $color7;
     }
