--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -301,13 +301,28 @@ html{
 //** Productos **//
 
 //** Productos **// Portada
+
+    
+.hero-section-productos {
+    background-image: url('../multimedia/imagenPortadaProductos.png');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    text-align:center;
+    justify-content:center;
+    display: flex;
+    align-items: center;
+}
+
+
+
    /* Estilo para el zoom in suave en la imagen */
 @keyframes zoomEffect {
     0% {
         transform: scale(1);
     }
     50% {
-        transform: scale(1.1);
+        transform: scale(1.025);
     }
     100% {
         transform: scale(1);
@@ -315,44 +330,94 @@ html{
 }
 
 .zoom-image-productos {
-    animation: zoomEffect 5s ease-in-out infinite; /* Animación continua de 5 segundos */
+    animation: zoomEffect 10s ease-in-out infinite; /* Animación continua de 5 segundos */
 }
 
-
-/* En versiones móviles, ajustamos el layout */
-@media (max-width: 767px) {
-    .hero-section-productos {
-        background-image: none; /* Elimina cualquier imagen de fondo en móviles */
-        padding: 20px; /* Añade un margen interno */
-    }
-    
-
-    .hero-section-productos .row {
-        flex-direction: column-reverse; /* Cambia el orden de los elementos */
-        align-items: center; /* Centra los elementos */
-        text-align: center; /* Asegura que el texto esté centrado en móviles */
-    }
-
-    /* Estilo para el texto */
-    .text-start-productos {
-        margin-bottom: 20px; /* Añade espacio entre el texto y la imagen */
-    }
-
-    /* Imagen lateral ajustada */
-    .zoom-image-productos {
-        width: 100%; /* Asegura que ocupe todo el ancho disponible */
-        height: auto; /* Mantiene las proporciones originales */
-        object-fit: contain; /* Evita que la imagen se deforme */
-    }
-    
-    /* Contenedor de la imagen */
-    .hero-section-productos .col-md-6:last-child {
-        padding: 0; /* Elimina relleno adicional */
-        width: 100%; /* Asegura que ocupe el ancho completo */
-    }
+.display-4-productos {
+    font-family: $font1;
+    color: $color5;
+    text-align: left;
 }
 
+.lead-productos {
+    font-family: $font1;
+    color: $color5;
+    text-align: left;
+}
 
+.container-fluid-azul {
+    background-color: $color5;
+    color: $color6;
+    font-family: $font1;
+    text-align: center;
+    height: 80px;
+    padding: $size3;
+}
+
+.pagination {
+    font-family: $font2;
+    color: $color7;
+}
+
+// Productos - suplementos
+.hero-section-suplementos {
+    background-image: url('../multimedia/imagenPortadaProductos.png');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    justify-content:center;
+    display: flex;
+}
+
+.zoom-image-suplementos {
+    animation: zoomEffect 10s ease-in-out infinite; /* Animación continua de 5 segundos */
+}
+
+.display-4-suplementos {
+    font-family: $font1;
+    color: $color5;
+    text-align: left;
+}
+
+// Productos - medicamentos venta libre
+.hero-section-medicamentosventalibre {
+    background-image: url('../multimedia/imagenPortadaProductos.png');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    justify-content:center;
+    display: flex;
+}
+
+.zoom-image-medicamentosventalibre {
+    animation: zoomEffect 10s ease-in-out infinite; /* Animación continua de 5 segundos */
+}
+
+.display-4-medicamentosventalibre {
+    font-family: $font1;
+    color: $color5;
+    text-align: left;
+}
+
+// Productos - medicamentos
+.hero-section-medicamentos {
+    background-image: url('../multimedia/imagenPortadaProductos.png');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    justify-content:center;
+    display: flex;
+}
+
+.zoom-image-medicamentos {
+    animation: zoomEffect 10s ease-in-out infinite; /* Animación continua de 5 segundos */
+}
+
+.display-4-medicamentos {
+    font-family: $font1;
+    color: $color5;
+    text-align: left;
+}
 
 // Productos - Categorías
 .display-4-productos {
@@ -435,7 +500,7 @@ html{
 }
 
 .bg-gray-carrusel {
-    background-image: url('../multimedia/fondo.CarruselProductos.png');
+    // background-image: url('../multimedia/fondo.CarruselProductos.png');
     background-size: cover;
     background-position: center;
     padding-bottom: 40px; // Ajuste adicional para evitar el solapamiento con el footer
@@ -673,6 +738,17 @@ button.btn-secondary {
     100% {
         transform: scale(1);
     }
+}
+
+.hero-section-contacto {
+    background-image: url('../multimedia/imagenPlanta.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    text-align:center;
+    justify-content:center;
+    display: flex;
+    align-items: center;
 }
 
 .zoom-image-contacto {
